# solana-accountsdb-plugin-kafka

./: Cargo.toml  README.md
proto/: event.proto
src/: account_update_publisher.rs  config.rs  confirmation_buffer.rs  confirmed_accounts.rs  filter.rs  initial_account_backfill.rs  initial_account_backfill_rpc.rs  ksql.rs  lib.rs  metrics.rs  plugin.rs  publisher.rs
src/initial_account_backfill/: mod.rs  rpc.rs
src/plugin/: dispatch.rs  mapping.rs  mod.rs
src/server/: accounts.rs  mod.rs  prom.rs  subscriptions.rs
